working readii prep steps

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -47,6 +47,7 @@
     "import itertools\n",
     "import pandas as pd\n",
     "import SimpleITK as sitk \n",
+    "import shutil\n",
     "import yaml\n",
     "\n",
     "from imgtools.autopipeline import AutoPipeline\n",
@@ -103,31 +104,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create symlinks for the raw image data for RADCURE test set to the `rawdata/RADCURE/images` directory"
+    "## Copy the raw image data for RADCURE test set to the `rawdata/RADCURE/images` directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# INPUT THE PATH TO THE RADCURE IMAGE DATA\n",
     "image_dir_path = Path(\"/home/bioinf/bhklab/radiomics/radiomics_orcestra/rawdata/RADCURE/images/zipped\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "link_dir_path = Path(raw_images_dir, \"RADCURE-0300\")\n",
-    "\n",
-    "pat_dir = image_dir_path / \"RADCURE-0300\"\n",
-    "\n",
-    "destination = shutil.copytree(pat_dir, link_dir_path)"
    ]
   },
   {
@@ -170,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,48 +261,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c59f8ea2a384f519b05d0617dc5cb0b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/713 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/bioinf/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/SimpleITK/extra.py:466: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "  \"\"\"Blurs an image by separable convolution with discrete\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 30\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# print(\"----> Original CT image cropped to the ROI bounding box, resized, and saved.\")\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# Process the negative control CT images\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m negative_control \u001b[38;5;129;01min\u001b[39;00m itertools\u001b[38;5;241m.\u001b[39mproduct(NEG_CONTROL_TYPES, NEG_CONTROL_REGIONS):\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;66;03m# Make negative control image using READII\u001b[39;00m\n\u001b[0;32m---> 30\u001b[0m     negative_control_ct_image \u001b[38;5;241m=\u001b[39m \u001b[43mapplyNegativeControl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mct_image\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     31\u001b[0m \u001b[43m                                                     \u001b[49m\u001b[43mnegativeControlType\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnegative_control\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[43m                                                     \u001b[49m\u001b[43mnegativeControlRegion\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnegative_control\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m                                                     \u001b[49m\u001b[43mroiMask\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mroi_image\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m                                                     \u001b[49m\u001b[43mrandomSeed\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;66;03m# Crop the negative control CT image to the bounding box and resize it to 50x50x50 for input to FMCIB\u001b[39;00m\n\u001b[1;32m     37\u001b[0m     cropped_nc_ct_image \u001b[38;5;241m=\u001b[39m crop_bbox(negative_control_ct_image, bounding_box, (\u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m, \u001b[38;5;241m50\u001b[39m))\n",
-      "File \u001b[0;32m~/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/readii/negative_controls.py:373\u001b[0m, in \u001b[0;36mapplyNegativeControl\u001b[0;34m(baseImage, negativeControlType, negativeControlRegion, roiMask, randomSeed)\u001b[0m\n\u001b[1;32m    371\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m negativeControlROIOnly(baseImage, roiMask, negativeControlType, randomSeed)\n\u001b[1;32m    372\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m: \u001b[38;5;66;03m# negativeControlRegion == \"non_roi\":\u001b[39;00m\n\u001b[0;32m--> 373\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnegativeControlNonROIOnly\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbaseImage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mroiMask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnegativeControlType\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrandomSeed\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/readii/negative_controls.py:290\u001b[0m, in \u001b[0;36mnegativeControlNonROIOnly\u001b[0;34m(baseImage, roiMask, negativeControlType, randomSeed)\u001b[0m\n\u001b[1;32m    287\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnegativeControlType must be one of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshuffled\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandomized\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m, or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrandomized_sampled\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    289\u001b[0m \u001b[38;5;66;03m# Check if baseImage is a sitk.Image or np.ndarray\u001b[39;00m\n\u001b[0;32m--> 290\u001b[0m arrBaseImage \u001b[38;5;241m=\u001b[39m \u001b[43mgetArrayFromImageOrArray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbaseImage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    292\u001b[0m \u001b[38;5;66;03m# Check if roiMask is a sitk.Image or np.ndarray\u001b[39;00m\n\u001b[1;32m    293\u001b[0m arrROIMask \u001b[38;5;241m=\u001b[39m getArrayFromImageOrArray(roiMask)\n",
-      "File \u001b[0;32m~/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/readii/negative_controls.py:35\u001b[0m, in \u001b[0;36mgetArrayFromImageOrArray\u001b[0;34m(imageOrArray)\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(imageOrArray, Image) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(imageOrArray, ndarray), \\\n\u001b[1;32m     32\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mInput must be a SimpleITK Image or numpy array.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(imageOrArray, Image):\n\u001b[0;32m---> 35\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43msitk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGetArrayFromImage\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimageOrArray\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(imageOrArray, ndarray):\n\u001b[1;32m     37\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m imageOrArray\n",
-      "File \u001b[0;32m~/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/SimpleITK/extra.py:299\u001b[0m, in \u001b[0;36mGetArrayFromImage\u001b[0;34m(image)\u001b[0m\n\u001b[1;32m    296\u001b[0m array_view \u001b[38;5;241m=\u001b[39m GetArrayViewFromImage(image)\n\u001b[1;32m    298\u001b[0m \u001b[38;5;66;03m# perform deep copy of the image buffer\u001b[39;00m\n\u001b[0;32m--> 299\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mnumpy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray_view\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "source": [
+    "### NOTE: The following cell will take a while to run. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for image_idx in tqdm(images_metadata.index):\n",
     "    image_idx_metadata = images_metadata.loc[image_idx]\n",
@@ -374,9 +330,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of images for original: 713\n",
+      "Number of images for randomized_sampled_full: 713\n",
+      "Number of images for randomized_sampled_non_roi: 713\n",
+      "Number of images for randomized_sampled_roi: 713\n",
+      "Number of images for shuffled_full: 713\n",
+      "Number of images for shuffled_non_roi: 713\n",
+      "Number of images for shuffled_roi: 713\n"
+     ]
+    }
+   ],
    "source": [
     "for image_type_dir_path in sorted(cropped_images_dir.glob(\"*\")):\n",
     "    image_type = image_type_dir_path.name\n",
@@ -388,6 +358,9 @@
     "    fmcib_input_df[\"coordX\"] = 0\n",
     "    fmcib_input_df[\"coordY\"] = 0\n",
     "    fmcib_input_df[\"coordZ\"] = 0\n",
+    "\n",
+    "    # Print length of the dataframe - for RADCURE test, should be 713\n",
+    "    print(f\"Number of images for {image_type}: {fmcib_input_df.shape[0]}\")\n",
     "\n",
     "    fmcib_input_df.to_csv(Path(proc_images_dir, \"fmcib_input\", f\"fmcib_input_{DATASET_NAME}_{image_type}.csv\"), index=False)"
    ]
@@ -416,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
