working analysis notebook

--- a/analyze_fmcib_outputs.ipynb
+++ b/analyze_fmcib_outputs.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,106 +151,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing original vs shuffled_roi correlations.\n",
-      "     Loading correlation matrix.\n",
-      "     Generating heatmaps for correlations.\n",
-      "Plotting vertical feature correlations heatmap...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:33-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/heatmap/nipy_spectral/original_pearson_self_correlation_heatmap.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting horizontal feature correlations heatmap...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:44-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/heatmap/nipy_spectral/shuffled_roi_pearson_self_correlation_heatmap.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting cross feature correlations heatmap...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:52-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/heatmap/nipy_spectral/original_vs_shuffled_roi_pearson_cross_correlation_heatmap.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHeatmap:73\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     Generating histograms for correlations.\n",
-      "Plotting vertical feature correlations histogram...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:53-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/histogram/original_pearson_self_correlation_histogram.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting horizontal feature correlations histogram...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:53-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/histogram/shuffled_roi_pearson_self_correlation_histogram.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Plotting cross feature correlations histogram...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2m2024-12-30T17:27:54-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mFile results/RADCURE/analysis/correlations/histogram/original_vs_shuffled_roi_pearson_cross_correlation_histogram.png already exists. \n",
-      "Set PlotWriter.overwrite to True to overwrite.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mreadii\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mplot_correlation.saveCorrelationHistogram:132\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Flag to make the original self-correlation plots only once\n",
-    "make_original_plots = True\n",
-    "\n",
     "# Name of the column used to extract the patient ID for a row of features\n",
     "file_path_column = 'image_path'\n",
     "\n",
@@ -259,6 +161,9 @@
     "\n",
     "# Colormap to use for plots\n",
     "heatmap_cmap = \"nipy_spectral\"\n",
+    "\n",
+    "# Whether to overwrite existing files\n",
+    "overwrite = True\n",
     "\n",
     "# Get and set up the feature dataframe for the original features once\n",
     "vertical_feature_type = \"original\"\n",
@@ -306,7 +211,8 @@
     "                                                                                    horizontal_feature_type,\n",
     "                                                                                    correlations_dir,\n",
     "                                                                                    correlation_method,\n",
-    "                                                                                    heatmap_cmap)\n",
+    "                                                                                    heatmap_cmap,\n",
+    "                                                                                    overwrite)\n",
     "    \n",
     "    print(\"     Generating histograms for correlations.\")\n",
     "    vert_histogram_path, horiz_histogram_path, cross_histogram_path = makeAllHistogramPlots(feature_correlation_df,\n",
@@ -314,13 +220,13 @@
     "                                                                                            horizontal_feature_type,\n",
     "                                                                                            correlations_dir,\n",
     "                                                                                            correlation_method,\n",
-    "                                                                                            num_bins=450\n",
-    "                                                                                            )"
+    "                                                                                            num_bins=450,\n",
+    "                                                                                            overwrite=overwrite)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": []
