feat: add file copying loop

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -114,6 +114,53 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# INPUT THE PATH TO THE RADCURE IMAGE DATA\n",
+    "downloaded_images_dir = Path(\"/home/bioinf/bhklab/radiomics/radiomics_orcestra/rawdata/RADCURE/images/zipped\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patient_ID_list_file = Path(\"./rawdata/RADCURE/clinical/col_test_patient_IDs_RADCURE.csv\")\n",
+    "copy_dir_path = Path(raw_images_dir)\n",
+    "\n",
+    "with open(patient_ID_list_file, \"r\") as f:\n",
+    "    pat_list = csv.reader(f)\n",
+    "    for row in pat_list:\n",
+    "        patient_ID = row[0]\n",
+    "\n",
+    "        existing_patient_image_directory = downloaded_images_dir / patient_ID\n",
+    "        copy_patient_image_directory = copy_dir_path / patient_ID\n",
+    "\n",
+    "        if copy_patient_image_directory.exists():\n",
+    "            print(f\"Copy of {patient_ID}'s image file already exists.\")\n",
+    "        else:\n",
+    "            destination = shutil.copytree(existing_patient_image_directory, copy_patient_image_directory, dirs_exist_ok=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Unzip the files - copy this to shell\n",
+    "# find \"rawdata/RADCURE/images\" -name \"*.zip\" | while read filename; do unzip -o -d \"`dirname \"$filename\"`\" \"$filename\"; done;"
+   ]
   }
  ],
  "metadata": {
@@ -132,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
