docs: add line about this running on all crop methods

--- a/run_fmcib.ipynb
+++ b/run_fmcib.ipynb
@@ -94,7 +94,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run each image type through FMCIB and save out the resulting features"
+    "## Run each image type and crop method through FMCIB and save out the resulting features\n",
+    "\n",
+    "This will run on all crop methods present the `procdata/images/fmcib/` directory."
    ]
   },
   {
@@ -110,7 +112,7 @@
     "    Path.mkdir(features_dir, parents=True, exist_ok=True)\n",
     "\n",
     "    for fmcib_csv_path in crop_type_dir_path.glob(\"*.csv\"):\n",
-    "        feature_file_save_path = Path(features_dir, f\"fmcib_features_{fmcib_csv_path.name.strip('fmcib_input_')}\")\n",
+    "        feature_file_save_path = Path(features_dir, f\"fmcib_features_{fmcib_csv_path.name.removeprefix('fmcib_input_')}\")\n",
     "        \n",
     "        # Only run inference if the output does not already exist\n",
     "        if not feature_file_save_path.exists():\n",
