refactor: make full and roi parallel runs and non-roi linear

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2025-01-08T11:46:50-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mThe dataset has already been indexed. Use --update to force update.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mimgtools\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mops.__init__:218\u001b[0m\n",
+      "\u001b[2m2025-01-09T16:20:40-0500\u001b[0m [\u001b[33m\u001b[1mwarning  \u001b[0m] \u001b[1mThe dataset has already been indexed. Use --update to force update.\u001b[0m [\u001b[0m\u001b[1m\u001b[34mimgtools\u001b[0m]\u001b[0m \u001b[36mcall\u001b[0m=\u001b[35mops.__init__:218\u001b[0m\n",
       "/home/bioinf/bhklab/radiomics/readii-fmcib/.pixi/envs/default/lib/python3.12/site-packages/imgtools/modules/datagraph.py:430: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
       "  relevant_study_id = self.df_new.loc[(self.df_new.edge_type.str.contains(regex_term)), \"study_x\"].unique()\n"
      ]
@@ -194,38 +194,49 @@
     "\n",
     "1. `bbox` - Find bounding box based on dimensions of the region of interest (ROI), crop image to these coordinates, resize/resample to `FMCIB_INPUT_SIZE`.\n",
     "2. `cube` - Create cube based on largest ROI bounding box dimension, crop image to these coordinates, resize/resample to `FMCIB_INPUT_SIZE`.\n",
-    "3. `centroid` - Create `FMCIB_INPUT_SIZE` cube centered on the ROI centroid, crop to these coordinates."
+    "3. `centroid` - Create `FMCIB_INPUT_SIZE` cube centered on the ROI centroid, crop to these coordinates.\n",
+    "\n",
+    "#### *All of these settings can be set in the `config/DATASET_NAME.yaml` file.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "CROP_METHOD = \"bbox\" # Options are bbox, cube, centroid\n",
-    "FMCIB_INPUT_SIZE = (50,50,50)"
+    "CROP_METHOD = config['crop_method'] # Options are bbox, cube, centroid\n",
+    "FMCIB_INPUT_SIZE = config['crop_size']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will only run on one crop method at a time. To run on each crop method, the `config` file must be updated and reloaded."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing original images...\n",
-      "Data already processed for bbox and original\n",
-      "Creating and processing ('shuffled', 'full') negative control...\n",
-      "Data already processed for bbox and shuffled_full\n",
-      "Creating and processing ('shuffled', 'roi') negative control...\n",
-      "Data already processed for bbox and shuffled_roi\n",
-      "Creating and processing ('shuffled', 'non_roi') negative control...\n",
-      "Creating and processing ('randomized_sampled', 'full') negative control...\n",
-      "Creating and processing ('randomized_sampled', 'roi') negative control...\n",
-      "Creating and processing ('randomized_sampled', 'non_roi') negative control...\n"
+      "Processing original images...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating and processing shuffled full negative control...\n",
+      "Creating and processing shuffled roi negative control...\n",
+      "Creating and processing shuffled non_roi negative control...\n",
+      "Creating and processing randomized_sampled full negative control...\n",
+      "Creating and processing randomized_sampled roi negative control...\n"
      ]
     }
    ],
@@ -238,19 +249,27 @@
     "                                        input_size = FMCIB_INPUT_SIZE,\n",
     "                                        roi_name = ROI_NAME,\n",
     "                                        negative_control_strategy = \"original\",\n",
+    "                                        parallel = True\n",
     "                                        )\n",
     "\n",
     "# Make negative control, then crop and resize images\n",
-    "\n",
-    "for negative_control in itertools.product(NEG_CONTROL_TYPES, NEG_CONTROL_REGIONS):\n",
-    "    print(f\"Creating and processing {negative_control} negative control...\")\n",
-    "    neg_control_df = prep_data_for_fmcib(input_image_dir = nifti_dir,\n",
-    "                                         output_dir_path = proc_images_dir,\n",
-    "                                         crop_method = CROP_METHOD,\n",
-    "                                         input_size = FMCIB_INPUT_SIZE,\n",
-    "                                         roi_name = ROI_NAME,\n",
-    "                                         negative_control_strategy = negative_control[0],\n",
-    "                                         negative_control_region = negative_control[1])"
+    "for type in NEG_CONTROL_TYPES:\n",
+    "    for region in NEG_CONTROL_REGIONS:\n",
+    "        print(f\"Creating and processing {type} {region} negative control...\")\n",
+    "        if region == \"non_roi\":\n",
+    "            # Non_roi processing takes us too much memory and fails in parallelization\n",
+    "            parallel = False\n",
+    "        else: \n",
+    "            parallel = True\n",
+    "        \n",
+    "        neg_control_df = prep_data_for_fmcib(input_image_dir = nifti_dir,\n",
+    "                                             output_dir_path = proc_images_dir,\n",
+    "                                             crop_method = CROP_METHOD,\n",
+    "                                             input_size = FMCIB_INPUT_SIZE,\n",
+    "                                             roi_name = ROI_NAME,\n",
+    "                                             negative_control_strategy = type,\n",
+    "                                             negative_control_region = region,\n",
+    "                                             parallel = parallel)"
    ]
   },
   {
@@ -277,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
