feat: add crop method to pipeline

--- a/analyze_fmcib_outputs.ipynb
+++ b/analyze_fmcib_outputs.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,6 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "from readii.utils import logger\n",
     "from readii.io.loaders import loadImageDatasetConfig, loadFeatureFilesFromImageTypes\n",
     "from readii.io.writers.correlation_writer import CorrelationWriter\n",
     "from readii.analyze.correlation import getFeatureCorrelations \n",
@@ -74,9 +73,13 @@
     "config = loadImageDatasetConfig(\"RADCURE\", Path(\"config\"))\n",
     "\n",
     "DATASET_NAME = config[\"dataset_name\"]\n",
+    "\n",
     "PAT_ID_PATTERN = config['patient_id_pattern']\n",
+    "\n",
     "NEG_CONTROL_REGIONS = config[\"negative_control_regions\"]\n",
     "NEG_CONTROL_TYPES = config[\"negative_control_types\"]\n",
+    "\n",
+    "CROP_METHOD = \"bbox\" #config['crop_method']\n",
     "\n",
     "# Get full list of image types to run FMCIB on\n",
     "negative_control_list = [f\"{negative_control[0]}_{negative_control[1]}\" for negative_control in itertools.product(NEG_CONTROL_TYPES, NEG_CONTROL_REGIONS)]"
@@ -95,12 +98,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "correlations_dir = Path(\"results\", DATASET_NAME, \"analysis\", \"correlations\")\n",
-    "\n",
     "# Set features input directory\n",
-    "features_dir = Path(\"results\", DATASET_NAME, \"fmcib_features\")\n",
+    "features_dir = Path(\"results\", DATASET_NAME, \"fmcib_features\", f\"cropped_{CROP_METHOD}\")\n",
     "\n",
     "# Make correlation results output directory\n",
+    "correlations_dir = Path(\"results\", DATASET_NAME, \"analysis\", \"correlations\", f\"cropped_{CROP_METHOD}\")\n",
     "for combo in itertools.product([correlations_dir], [\"matrix\", \"heatmap\", \"histogram\"]):\n",
     "    Path(*combo).mkdir(parents=True, exist_ok=True)"
    ]
@@ -114,12 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the extracted feature data\n",
-    "# This makes a dictionary of feature sets, with the image type as the key\n",
+    "# This makes a dictionary of feature sets, with the image type as the keys\n",
     "extracted_feature_sets = loadFeatureFilesFromImageTypes(extracted_feature_dir=features_dir,\n",
     "                                                        image_types = ([\"original\"] + negative_control_list), \n",
     "                                                        drop_labels = False)"
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing original vs shuffled_full correlations.\n",
+      "     Calculating correlation matrix.\n"
+     ]
+    }
+   ],
    "source": [
     "# Name of the column used to extract the patient ID for a row of features\n",
     "file_path_column = 'image_path'\n",
@@ -175,6 +186,7 @@
     "for horizontal_feature_type in negative_control_list:\n",
     "    print(f\"Processing {vertical_feature_type} vs {horizontal_feature_type} correlations.\")\n",
     "\n",
+    "    # Generate the output path for matrix file existence check\n",
     "    corr_matrix_output_path = corr_matrix_writer.resolve_path(VerticalFeatureType=vertical_feature_type,\n",
     "                                                              HorizontalFeatureType=horizontal_feature_type,\n",
     "                                                              CorrelationType=correlation_method)\n",
@@ -223,13 +235,6 @@
     "                                                                                            num_bins=450,\n",
     "                                                                                            overwrite=overwrite)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
