fix: convert fmcib_input_size to tuple on load in

--- a/run_readii_prep.ipynb
+++ b/run_readii_prep.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,8 @@
       "Creating and processing shuffled roi negative control...\n",
       "Creating and processing shuffled non_roi negative control...\n",
       "Creating and processing randomized_sampled full negative control...\n",
-      "Creating and processing randomized_sampled roi negative control...\n"
+      "Creating and processing randomized_sampled roi negative control...\n",
+      "Creating and processing randomized_sampled non_roi negative control...\n"
      ]
     }
    ],
@@ -296,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
